--- a/index.html
+++ b/index.html
@@ -2,94 +2,57 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- displays site properly based on user's device -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-
-  <title>Frontend Mentor | Social proof section</title>
+  <title>Frontend Mentor | Article preview component</title>
 
   <!-- Google Fonts -->
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
-  <div class="background">
-    <img class="top-image" src="images/bg-pattern-top-desktop.svg" alt="top-pattern">
-    <img class="bottom-image" src="images/bg-pattern-bottom-desktop.svg" alt="bottom-pattern">
-
-     <div class="top-container">
-      <div class="left-box">
-        <h1 class="big-title">10,000+ of our users love our products.</h1>
-        <p class="description">We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
-      </div>
-      <div class="right-box">
-        <div class="stars-box stars-1">
-          <div class="stars">
-            <img class="star" src="images/icon-star.svg" alt="star">
-            <img class="star" src="images/icon-star.svg" alt="star">
-            <img class="star" src="images/icon-star.svg" alt="star">
-            <img class="star" src="images/icon-star.svg" alt="star">
-            <img class="star" src="images/icon-star.svg" alt="star">
-          </div>
-          <h2 class="rating">Rated 5 Stars in Reviews</h2>
+  <main>
+    <div class="container">
+      <div class="container__box">
+        <div class="container__box--left">
+          <img src="images/drawers.jpg" alt="drawers" class="container__box--left__image">
         </div>
-        <div class="stars-box stars-2">
-          <div class="stars">
-            <img class="star" src="images/icon-star.svg" alt="star">
-            <img class="star" src="images/icon-star.svg" alt="star">
-            <img class="star" src="images/icon-star.svg" alt="star">
-            <img class="star" src="images/icon-star.svg" alt="star">
-            <img class="star" src="images/icon-star.svg" alt="star">
+        <div class="container__box--right">
+          <h1 class="headline">
+            Shift the overall look and feel by adding these wonderful touches to furniture in your home
+          </h1>
+          <p class="paragraph">
+            Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple tips to help you make any room feel complete.
+          </p>
+          <div class="details">
+            <img src="images/avatar-michelle.jpg" alt="michelle" class="details__image">
+            <h2 class="details__text-secondary">Michelle Appleton</h2>
+            <h3 class="details__text-tertiary">28 Jun 2020</h3>
           </div>
-          <h2 class="rating">Rated 5 Stars in Report Guru</h2>
-        </div>
-        <div class="stars-box stars-3">
-          <div class="stars">
-            <img class="star" src="images/icon-star.svg" alt="star">
-            <img class="star" src="images/icon-star.svg" alt="star">
-            <img class="star" src="images/icon-star.svg" alt="star">
-            <img class="star" src="images/icon-star.svg" alt="star">
-            <img class="star" src="images/icon-star.svg" alt="star">
+          <div class="invisible">
+            <h2 class="text">Share</h2>
+            <div class="images">
+              <img src="images/icon-facebook.svg" alt="facebook" class="facebook">
+              <img src="images/icon-twitter.svg" alt="twitter" class="twitter">
+              <img src="images/icon-pinterest.svg" alt="pinterest" class="pinterest">
+            </div>
           </div>
-          <h2 class="rating">Rated 5 Stars in BestTech</h2>
+          <div class="share">
+            <img src="images/icon-share.svg" alt="icon-share" class="share__image">
+          </div>
         </div>
       </div>
     </div>
-   <div class="bottom-container">
-      <div class="people-box">
-        <div class="people box-1">
-          <img class="face colton" src="images/image-colton.jpg" alt="image-colton">
-          <h2 class="name">Colton Smith</h2>
-          <h2 class="who">Verified Buyer</h2>
-          <p class="about"> "We needed the same printed design as the one we had ordered a week prior.
-            Not only did they find the original order, but we also received it in time.
-            Excellent!"</p>
-        </div>
-        <div class="people box-2">
-          <img class="face irene" src="images/image-irene.jpg" alt="image-irene">
-          <h2 class="name">Irene Roberts</h2>
-          <h2 class="who">Verified Buyer</h2>
-          <p class="about"> "Customer service is always excellent and very quick turn around. Completely
-            delighted with the simplicity of the purchase and the speed of delivery."</p>
-        </div>
-        <div class="people box-3">
-          <img class="face anne" src="images/image-anne.jpg" alt="image-anne">
-          <h2 class="name">Anne Wallace</h2>
-          <h2 class="who">Verified Buyer</h2>
-          <p class="about">"Put an order with this company and can only praise them for the very high
-            standard. Will definitely use them again and recommend them to everyone!" </p>
-        </div>
-      </div>
-    </div>
-  </div>
+  </main>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+  <script src="index.js" charset="utf-8"></script>
 </body>
 
 </html>
