--- a/index.html
+++ b/index.html
@@ -5,54 +5,85 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <title>Frontend Mentor | Article preview component</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <title>Frontend Mentor | Four card feature section</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;500;700&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/style.css">
-
-</head>
+  <link rel="stylesheet" href="css/styles.css">
 
 <body>
+
   <main>
-    <div class="container">
-      <div class="container__box">
-        <div class="container__box--left">
-          <img src="images/drawers.jpg" alt="drawers" class="container__box--left__image">
-        </div>
-        <div class="container__box--right">
-          <h1 class="headline">
-            Shift the overall look and feel by adding these wonderful touches to furniture in your home
-          </h1>
-          <p class="paragraph">
-            Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple tips to help you make any room feel complete.
-          </p>
-          <div class="details">
-            <img src="images/avatar-michelle.jpg" alt="michelle" class="details__image">
-            <h2 class="details__text-secondary">Michelle Appleton</h2>
-            <h3 class="details__text-tertiary">28 Jun 2020</h3>
-          </div>
-          <div class="invisible">
-            <h2 class="text">Share</h2>
-            <div class="images">
-              <img src="images/icon-facebook.svg" alt="facebook" class="facebook">
-              <img src="images/icon-twitter.svg" alt="twitter" class="twitter">
-              <img src="images/icon-pinterest.svg" alt="pinterest" class="pinterest">
+    <section class="framework">
+      <div class="headline">
+        <h1 class="heading-primary heading-primary--1">Reliable, efficient delivery</h1>
+        <h1 class="heading-primary heading-primary--2">Powered by Technology</h1>
+        <h3 class="heading-tertiary u-margin-top-small">Our Artificial Intelligence powered tools use millions of projects data points to ensure that your project is successful</h3>
+      </div>
+      <div class="row boxes">
+        <div class="col-1-of-3 boxes__column">
+          <div class="boxes__back-helper boxes__back-helper--1">
+            <div class="boxes__box boxes__box--1">
+              <h2 class="heading-secondary">Supervisor</h2>
+              <p class="paragraph">Monitor activity to identify project roadblocks</p>
+              <img src="images/icon-supervisor.svg" alt="icon-supervisor" class="boxes__box--image">
             </div>
           </div>
-          <div class="share">
-            <img src="images/icon-share.svg" alt="icon-share" class="share__image">
+        </div>
+        <div class="col-1-of-3 middle-box boxes__column">
+          <div class="boxes__back-helper boxes__back-helper--2">
+          <div class="boxes__box boxes__box--2">
+            <h2 class="heading-secondary">Supervisor</h2>
+            <p class="paragraph">Scans out talent network to create the optimal team for your project</p>
+            <img src="images/icon-team-builder.svg" alt="team-builder" class="boxes__box--image">
+            </div>
+          </div>
+          <div class="boxes__back-helper boxes__back-helper--3">
+          <div class="boxes__box boxes__box--3">
+            <h2 class="heading-secondary">Supervisor</h2>
+            <p class="paragraph">Regularly evaluates our talent to ensure quality</p>
+            <img src="images/icon-karma.svg" alt="icon-karma" class="boxes__box--image">
+            </div>
+          </div>
+        </div>
+        <div class="col-1-of-3 boxes__column">
+          <div class="boxes__back-helper boxes__back-helper--4">
+          <div class="boxes__box boxes__box--4">
+            <h2 class="heading-secondary">Supervisor</h2>
+            <p class="paragraph">Uses data from past projects to provide better delivery estimates</p>
+            <img src="images/icon-calculator.svg" alt="icon-calculator" class="boxes__box--image">
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </main>
-  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-  <script src="index.js" charset="utf-8"></script>
+
+  <!-- Reliable, efficient delivery
+  Powered by Technology
+
+  Our Artificial Intelligence powered tools use millions of project data points
+  to ensure that your project is successful
+
+  Supervisor
+  Monitors activity to identify project roadblocks
+
+  Team Builder
+  Scans our talent network to create the optimal team for your project
+
+  Karma
+  Regularly evaluates our talent to ensure quality
+
+  Calculator
+  Uses data from past projects to provide better delivery estimates -->
+
+
 </body>
 
 </html>
