Challenge completed for desktop + active state

--- a/index.html
+++ b/index.html
@@ -7,82 +7,62 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <title>Frontend Mentor | Four card feature section</title>
+  <title>Frontend Mentor | Base Apparel coming soon page</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
+
+</head>
 
 <body>
 
   <main>
-    <section class="framework">
-      <div class="headline">
-        <h1 class="heading-primary heading-primary--1">Reliable, efficient delivery</h1>
-        <h1 class="heading-primary heading-primary--2">Powered by Technology</h1>
-        <h3 class="heading-tertiary u-margin-top-small">Our Artificial Intelligence powered tools use millions of projects data points to ensure that your project is successful</h3>
-      </div>
-      <div class="row boxes">
-        <div class="col-1-of-3 boxes__column">
-          <div class="boxes__back-helper boxes__back-helper--1">
-            <div class="boxes__box boxes__box--1">
-              <h2 class="heading-secondary">Supervisor</h2>
-              <p class="paragraph">Monitor activity to identify project roadblocks</p>
-              <img src="images/icon-supervisor.svg" alt="icon-supervisor" class="boxes__box--image">
-            </div>
+    <section class="section-main">
+      <div class="flyer">
+        <img src="images/hero-desktop.jpg" alt="Picture of a woman" class="flyer__image">
+        <form action="#" class="details">
+          <img src="images/logo.svg" alt="The company icon" class="details__logo">
+          <div class="details__text-box">
+            <h1 class="heading-primary">
+              <span class="heading-primary__were">We're</span>
+              <span class="heading-primary__coming">Coming</span>
+              <span class="heading-primary__soon">Soon</span>
+            </h1>
+            <p class="paragraph">
+              Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals.
+            </p>
           </div>
-        </div>
-        <div class="col-1-of-3 middle-box boxes__column">
-          <div class="boxes__back-helper boxes__back-helper--2">
-          <div class="boxes__box boxes__box--2">
-            <h2 class="heading-secondary">Supervisor</h2>
-            <p class="paragraph">Scans out talent network to create the optimal team for your project</p>
-            <img src="images/icon-team-builder.svg" alt="team-builder" class="boxes__box--image">
-            </div>
+          <div class="details__input-box">
+            <input type="email" name="email" placeholder="Email Address" class="details__input-box--email" id="email-input">
+            <a href="#" class="details__input-box--btn">&gt;</a>
+            <img src="images/icon-error.svg" alt="Error icon" class="details__input-box--img">
+            <h3 class="details__input-box--heading-error">Please provide a valid email</h3>
           </div>
-          <div class="boxes__back-helper boxes__back-helper--3">
-          <div class="boxes__box boxes__box--3">
-            <h2 class="heading-secondary">Supervisor</h2>
-            <p class="paragraph">Regularly evaluates our talent to ensure quality</p>
-            <img src="images/icon-karma.svg" alt="icon-karma" class="boxes__box--image">
-            </div>
-          </div>
-        </div>
-        <div class="col-1-of-3 boxes__column">
-          <div class="boxes__back-helper boxes__back-helper--4">
-          <div class="boxes__box boxes__box--4">
-            <h2 class="heading-secondary">Supervisor</h2>
-            <p class="paragraph">Uses data from past projects to provide better delivery estimates</p>
-            <img src="images/icon-calculator.svg" alt="icon-calculator" class="boxes__box--image">
-            </div>
-          </div>
-        </div>
+        </form>
       </div>
     </section>
   </main>
 
-  <!-- Reliable, efficient delivery
-  Powered by Technology
 
-  Our Artificial Intelligence powered tools use millions of project data points
-  to ensure that your project is successful
 
-  Supervisor
-  Monitors activity to identify project roadblocks
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
 
-  Karma
-  Regularly evaluates our talent to ensure quality
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates -->
 
+
+
+
+  <!-- We're coming soon
+
+  Hello fellow shoppers! We're currently building our new fashion store.
+  Add your email below to stay up-to-date with announcements and our launch deals.
+
+  Email Address -->
 
 </body>
 
